Again doing front end. This is my first web Application.

--- a/SlotGameView/ClientApp/src/app/slot-game/slot-game.component.html
+++ b/SlotGameView/ClientApp/src/app/slot-game/slot-game.component.html
@@ -1,5 +1,4 @@
-<p>
-  slot-game works!
-</p>
 
-<div #pixiContainer class="centered"></div>
+<div class="container">
+  <div #pixiContainer class="centered"></div>
+</div>
