--- a/SlotGameView/ClientApp/src/app/app.component.html
+++ b/SlotGameView/ClientApp/src/app/app.component.html
@@ -18,7 +18,7 @@
   </li>
 </ul> -->
 
-<header><h1>header</h1></header>
+<!-- <header><h1>header</h1></header> -->
 <router-outlet></router-outlet>
 
-<footer><h1>footer</h1></footer>
+<!-- <footer><h1>footer</h1></footer> -->
