--- a/SlotGameView/ClientApp/src/app/app.component.html
+++ b/SlotGameView/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <nav>
     <a routerLink="" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Slot Game</a>
     <a routerLink="/DashBoard" routerLinkActive="active">DashBoard</a>
@@ -10,4 +10,16 @@
 </mat-menu>
   
   <router-outlet></router-outlet>
-</div>
+</div> -->
+
+<mat-toolbar color="primary">
+  <a class="logo" routerLink="" 
+  [routerLinkActiveOptions]="{exact:true}" 
+  routerLinkActive="active">BeHappyGaming</a>
+  <span class="spacer"></span>
+  <a mat-button routerLink="DashBoard" 
+  routerLinkActive="active">DashBoard</a>
+</mat-toolbar>
+
+
+<router-outlet></router-outlet>
