Created awesome Slot View ! ! !

--- a/SlotGameView/ClientApp/src/app/app.component.css
+++ b/SlotGameView/ClientApp/src/app/app.component.css
@@ -1,8 +1,8 @@
 
-  .active {color:purple;}
+  .active {color:white;}
   
   .mat-toolbar {
-    background: #212121;
+    background: transparent;
   }
   
   .spacer {
